Actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -57,7 +57,7 @@
     "add-invoices": "Dodaj faktury",
     "add-new-plugin": "Dodaj nową wtyczkę",
     "additional-text": "Tekst dodatkowy",
-    "address": "Dirección",
+    "address": "Adres",
     "addresses": "Direcciones",
     "addresses-and-contacts": "Adresy i kontakty",
     "admin": "Administrator",
@@ -262,7 +262,7 @@
     "color-light": "Color luz",
     "color-primary": "Kolor podstawowy",
     "color-secondary": "Color secundario",
-    "color-success": "Color éxito",
+    "color-success": "Kolor sukcesu",
     "color-warning": "Kolor ostrzeżenia",
     "colors": "Colores",
     "column": "Kolumna",
@@ -317,7 +317,7 @@
     "copy-p": "Rellene el formulario para hacer una copia de este modelo",
     "copy-subaccounts": "Copiar plan contable",
     "core-update": "Actualización del núcleo a la versión %version%",
-    "core-update-warning": "Advertencias de actualización",
+    "core-update-warning": "Ostrzeżenia o aktualizacji",
     "correct": "Correcto",
     "cost": "Coste",
     "cost-price": "Cena kosztu",
@@ -355,7 +355,7 @@
     "customer-estimations": "Szacowania dla klientów",
     "customer-group": "Grupa klientów",
     "customer-groups": "Grupy klientów",
-    "customer-invoice": "Factura de Cliente",
+    "customer-invoice": "Faktura klienta",
     "customer-invoice-deleted-successfully": "Faktura sprzedaży %docCode% została pomyślnie usunięta.",
     "customer-invoices": "Faktury klientów",
     "customer-not-found": "Klient nie znaleziony",
@@ -397,11 +397,11 @@
     "db-type": "Typ serwera SQL",
     "db-type-not-recognized": "Typ połączenia nie jest rozpoznawany. Musi być MySQL lub PostgreSQL",
     "db-user": "Użytkownik bazy danych",
-    "debit": "Debe",
+    "debit": "Debet",
     "debug-mode": "Tryb debugowania",
     "december": "Diciembre",
     "decimal-separator": "Separador de decimales",
-    "decimals": "Decimales",
+    "decimals": "Liczby dziesiętne",
     "default": "Domyślnie",
     "default-customer": "Klient domyślny",
     "default-retention": "Domyślne zatrzymanie",
@@ -445,7 +445,7 @@
     "description-2": "Opis 2",
     "description-3": "Descripción 3",
     "description-4": "Opis 4",
-    "description-4ba": "Descripción 4ba",
+    "description-4ba": "Opis 4ba",
     "description2": "Opis 2",
     "description3": "Opis 3",
     "design": "Projektowanie",
@@ -471,7 +471,7 @@
     "document-configuration": "Configuración de documentos",
     "document-report": "Informe de documentos",
     "document-sequence": "Sekwencja dokumentu",
-    "document-sequences": "Secuencias de documentos",
+    "document-sequences": "Sekwencje dokumentów",
     "document-states": "Stany dokumentu",
     "document-type": "Tipo documento",
     "document-type-valid-length": "Nieprawidłowy typ dokumentu (musi mieć od 1 do 20 znaków).",
@@ -551,7 +551,7 @@
     "es_EC": "Hiszpański (Ekwador)",
     "es-tax-exception-e1": "Hiszpania: wyjątek na mocy artykułu 20 ustawy o VAT",
     "es-tax-exception-e2": "Hiszpania: wyjątek na mocy artykułu 21 ustawy o VAT",
-    "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
+    "es-tax-exception-e3": "Hiszpania: wyjątek z artykułu 22 ustawy o VAT",
     "es-tax-exception-e4": "Hiszpania: wyjątek na mocy artykułu 23 i 24 ustawy o VAT",
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "Hiszpania: wyjątek z innej przyczyny",
@@ -577,7 +577,7 @@
     "excess": "Nadmiar",
     "exclude-invalid": "Excluir inválidos",
     "exclude-valid": "Wyklucz poprawne",
-    "exempt": "Exento",
+    "exempt": "Zwolniony",
     "exercise": "Ćwiczenie",
     "exercise-date-out-range": "Data nie mieści się w okresie rocznym.",
     "exercise-date-range-exists": "Istnieje już ćwiczenie w tym przedziale dat (%start% - %end%)",
@@ -597,7 +597,7 @@
     "extra-file": "Dodatkowy plik",
     "failed": "Niepowodzenie",
     "families": "Rodziny",
-    "family": "Familia",
+    "family": "Rodzina",
     "family-code": "Kod rodziny",
     "fax": "Faks",
     "february": "Febrero",
@@ -606,14 +606,14 @@
     "fields": "Pola",
     "file": "Plik",
     "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
-    "file-name": "Nombre de archivo",
+    "file-name": "Nazwa pliku",
     "file-not-exists": "Plik nie istnieje: %fileName%",
     "file-not-found": "Plik %fileName% nie znaleziony.",
     "file-not-supported": "Plik nie jest obsługiwany",
     "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
     "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
     "file-yet-exists": "Plik już istnieje: %filePath%",
-    "filecache-clear": "Filecache limpiada.",
+    "filecache-clear": "Filecache wyczyszczono.",
     "filecache-delete-key-item": "Eliminado elemento '%item%' de Filecache.",
     "filecache-get-key-item": "Pobrany element '%item%' z Filecache.",
     "filecache-set-key-item": "Przypisany element '%item%' do Filecache.",
@@ -784,7 +784,7 @@
     "invalid-user-can-permission": "Nieprawidłowe uprawnienie: %permission%. Dostępne uprawnienia to: dostęp, usuwanie, eksport, import, aktualizacja i tylko-dane-właściciela.",
     "invalid-web": "Nieprawidłowy adres sieciowy: %web%",
     "invoice": "Factura",
-    "invoice-email-subject": "Su factura %code%",
+    "invoice-email-subject": "Twoja faktura %code%",
     "invoice-email-text": "Szanowny kliencie, w załączeniu przesyłamy fakturę odpowiadającą świadczonym usługom. Jeśli masz jakiekolwiek pytania, możesz odpowiedzieć na ten sam e-mail. Dziękujemy! Pozdrawiamy,",
     "invoice-has-no-receipts": "Faktura nie ma paragonów. Utwórz przynajmniej jeden z zakładki paragonów.",
     "invoice-have-rectifying-cant-delete": "Faktura ma już korektę. Nie można jej usunąć.",
@@ -911,7 +911,7 @@
     "longitude-abb": "Long",
     "look-for-gaps": "Szukaj luk",
     "lot": "Lote",
-    "low-security": "Baja seguridad",
+    "low-security": "Niski poziom bezpieczeństwa",
     "machine": "Maszyna",
     "machines": "Maszyny",
     "macro-account-note-info": "Kody do zamiany na wartości",
@@ -924,7 +924,7 @@
     "manage-installation": "Zarządzaj",
     "manual": "Instrukcja obsługi",
     "manufacturer": "Producent",
-    "manufacturer-code": "Código de fabricante",
+    "manufacturer-code": "Kod producenta",
     "manufacturers": "Producenci",
     "march": "Marzec",
     "margin": "Margen",
@@ -1002,7 +1002,7 @@
     "new": "Nuevo",
     "new-acc-entry-line-p": "Wprowadzisz linię, wpisując poniżej kod podkonta lub naciskając przycisk podkonta i wybierając podkonto.",
     "new-address": "Nowy adres",
-    "new-customer": "nuevo cliente",
+    "new-customer": "nowy klient",
     "new-customers": "Nowi klienci",
     "new-invoice-line-p": "Możesz dodać produkt, naciskając przycisk produktu lub wpisując jego referencję lub kod kreskowy w polu kodu kreskowego. Lub naciśnij przycisk linii, aby dodać linię bez produktu.",
     "new-password": "Nowe hasło",
@@ -1026,7 +1026,7 @@
     "non-editable-accounting-entry": "Nieedytowalny wpis księgowy",
     "non-editable-columns": "Kolumny nieedytowalne: %columns%",
     "non-editable-document": "Dokument nieedytowalny",
-    "none": "Ninguno",
+    "none": "Żaden",
     "normal": "Normalny",
     "not-allowed-delete": "Nie masz uprawnień do usunięcia",
     "not-allowed-modify": "Nie masz uprawnień do modyfikacji",
@@ -1061,7 +1061,7 @@
     "only-insert": "Tylko dodaj",
     "only-owner-data": "Wyświetl tylko rekordy właściciela",
     "only-pending": "Tylko oczekujące",
-    "only-suspended": "Solamente suspendidos",
+    "only-suspended": "Tylko zawieszeni",
     "open": "Otwórz",
     "open-exercise": "Otwórz ćwiczenie",
     "open-tab": "Otwórz w nowej karcie",
@@ -1144,8 +1144,8 @@
     "physical-stock": "Alyz fizyczny",
     "picking": "Picking",
     "plan": "Plan",
-    "please-enter-value": "Por favor, introduzca un valor para el campo",
-    "plugin": "Plugin",
+    "please-enter-value": "Proszę wprowadzić wartość dla pola",
+    "plugin": "Wtyczka",
     "plugin-deleted": "Wtyczka %pluginName% została pomyślnie usunięta.",
     "plugin-disabled": "Wtyczka %pluginName% została pomyślnie wyłączona.",
     "plugin-enabled": "Wtyczka %pluginName% została pomyślnie włączona.",
@@ -1158,7 +1158,7 @@
     "plugin-needs-fs-version": "El plugin %pluginName% necesita FacturaScripts %minVersion% pero tiene instalado FacturaScripts %version%",
     "plugin-not-compatible": "Wtyczka %pluginName% nie jest zgodna z FacturaScripts %version%",
     "plugin-order": "Zamówienie: %num%",
-    "plugin-phpversion-error": "El plugin %pluginName% requiere PHP %php% o superior",
+    "plugin-phpversion-error": "Wtyczka %pluginName% wymaga PHP %php% lub nowszego",
     "plugin-removal-disabled": "La eliminación de plugins está desactivada en este servidor",
     "plugin-unsupported-version": "Wtyczka %pluginName% jest przeznaczona dla FacturaScripts 2017 lub wcześniejszych wersji, ale używasz FacturaScripts %version%",
     "plugin-update": "Aktualizacja wtyczki %pluginName% do wersji %version%",
@@ -1441,7 +1441,7 @@
     "subaccount-belongs-other-year": "Konto podrzędne %subAccountCode% należy do innego roku.",
     "subaccount-irpf": "Konto dla potrąceń",
     "subaccount-irpf-creditor": "Rachunek IRPF dla zakupów",
-    "subaccount-not-found": "Subcuenta %subAccountCode% no encontrada.",
+    "subaccount-not-found": "Subkonto %subAccountCode% nie zostało znalezione.",
     "subaccount-purchases": "Cuenta para compras",
     "subaccount-pyg-not-found": "Subkonto zysków i strat nie znalezione",
     "subaccount-sales": "Konto sprzedaży",
@@ -1468,7 +1468,7 @@
     "supplier-estimation": "Szacowanie dostawcy",
     "supplier-estimations": "Kosztorysy dostawców",
     "supplier-have-no-iban": "Dostawca %%supplier nie posiada IBAN (numer konta bankowego)",
-    "supplier-invoice": "Factura de Proveedor",
+    "supplier-invoice": "Faktura dostawcy",
     "supplier-invoice-deleted-successfully": "Faktura zakupu %docCode% została pomyślnie usunięta.",
     "supplier-invoices": "Faktury dostawców",
     "supplier-not-found": "Dostawca nie znaleziony",
@@ -1504,7 +1504,7 @@
     "tax-debit-account": "Konto debetowe do podatków",
     "tax-transport": "Podatki od transportu",
     "taxes": "Podatki",
-    "telemetry-data-to-send": "Las instalaciones registradas notifican periódicamente la versión de FacturaScripts, PHP, país, idioma y listado de plugins.",
+    "telemetry-data-to-send": "Zarejestrowane instalacje okresowo informują o wersji FacturaScripts, PHP, kraju, języku i liście wtyczek.",
     "telephone-prefix": "Prefiks telefoniczny",
     "template": "Szablon",
     "template-error": "Błąd szablonu",
@@ -1593,7 +1593,7 @@
     "updated-model": "Zaktualizowano %model% (%key%) %desc%",
     "updater": "Aktualizacja",
     "updates-available": "Dostępne aktualizacje",
-    "updates-available-p": "Dostępne są aktualizacje FacturaScripts. Proszę kliknij aktualizator i pobierz nową wersję. Aktualizacje naprawiają błędy i dodają nowe funkcje.",
+    "updates-available-p": "Dostępne są aktualizacje FacturaScripts. Proszę kliknąć aktualizator i pobrać nową wersję. Aktualizacje naprawiają błędy i dodają nowe funkcje.",
     "updating-attached-relations": "Aktualizowanie powiązań załączonych plików",
     "upload-file": "Prześlij plik",
     "uploaded-at": "Cargado en",
