--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -716,7 +716,7 @@
     "has-parent": "Tem pai",
     "hash": "Hash",
     "header": "Cabeçalho",
-    "heading-account-group-id": "Cabeçalho do grupo de identificação da conta",
+    "heading-account-group-id": "ID do grupo de epígrafes",
     "heading-account-id-root": "ID raiz",
     "health": "Saúde",
     "height": "Altura",
