--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -386,7 +386,7 @@
     "date-out-of-exercise-range": "Data da faixa de excervise 0",
     "date-wildcard-info": "Data atual (data do computador)",
     "dateentry-wildcard-info": "Data indicada no cabeçalho do lançamento contábil",
-    "day": "day",
+    "day": "Dia",
     "days": "dias",
     "days-log-retention": "Nº dias de retenção de logs",
     "days-until-expiration": "Dias até o vencimento",
@@ -485,7 +485,7 @@
     "done-date": "Data de conclusão",
     "dont-sell-above-pvp": "Não venda acima o preço de varejo",
     "dont-sell-below-cost": "Não venda abaixo o custo",
-    "download": "download",
+    "download": "Baixar",
     "download-completed": "Download completado",
     "download-error": "Erro ao baixar. Código %status% - %error%",
     "download-xml": "Baixar XML",
@@ -728,7 +728,7 @@
     "high": "Alto",
     "high-purchase-price": "Preço de compra mais alto",
     "hint-create-accounting-entry": "Criar o lançamento contábil para a regularização dos impostos do período",
-    "hint-vat-register": "View\/Modify VAT registration",
+    "hint-vat-register": "Ver\/Modificar registro de IVA",
     "history": "Histórico",
     "homepage": "Página inicial",
     "host": "Hospedeiro",
@@ -767,7 +767,7 @@
     "installer": "Instalador",
     "installer-p": "Bem-vindo ao instalador FacturaScripts. Preencha os campos necessários para se conectar ao banco de dados.",
     "installer-requirements": "As seguintes extensões e funções são necessárias para FacturaScripts:",
-    "integrity-check": "Integrity check",
+    "integrity-check": "Verificação de integridade",
     "integrity-check-help": "Esta é uma verificação da integridade do sistema, descrita como",
     "interest": "Interesse",
     "international-identifier": "Identificador internacional",
@@ -1150,7 +1150,7 @@
     "plugin-disabled": "Plugin desativado com sucesso.",
     "plugin-enabled": "Plugin ativado com sucesso.",
     "plugin-file-too-big": "Este servidor não permite fazer upload de arquivos com mais de %size% MB. Por favor, aumente o tamanho máximo de upload de arquivos no PHP ou copie o arquivo para a pasta Plugins.",
-    "plugin-installation-disabled": "plugin-installation-disabled",
+    "plugin-installation-disabled": "A instalação de plugins está desativada neste servidor",
     "plugin-installed": "Plugin instalado",
     "plugin-need-update": "O plugin %plugin% precisará de atualização para funcionar com a nova versão do FacturaScripts.",
     "plugin-need-update-but": "O plugin %plugin% ainda não tem uma atualização compatível.",
@@ -1262,7 +1262,7 @@
     "refund-payment-concept": "Reembolso do documento %document%",
     "refunds": "Reembolsos",
     "register": "Registar",
-    "register-install-ad": "Registar a instalação do FacturaScripts",
+    "register-install-ad": "Registrar a instalação do FacturaScripts",
     "register-install-ad-p": "Se registrar a instalação do FacturaScripts, obterá 1 mês de patrocínio PRO, que lhe permite baixar um dos nossos plugins exclusivos. Além disso, ajuda-nos a obter estatísticas das versões do core e do PHP.",
     "register-installation": "Registrar instalação",
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
@@ -1559,7 +1559,7 @@
     "try-again-later": "T",
     "tuesday": "terça-feira",
     "type": "Tipo",
-    "type-alert": "Type alert",
+    "type-alert": "Tipo de alerta",
     "type-critical": "Tipo crítico",
     "type-debug": "Tipo debug",
     "type-emergency": "Tipo de emergência",
