Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -154,7 +154,7 @@
     "banking-movements": "Moviments bancaris",
     "barcode": "Codi de barres",
     "bcc": "CCO",
-    "become-sponsor": "Hazte patrocinador",
+    "become-sponsor": "Fes-te patrocinador",
     "big": "Gran",
     "billing": "Facturació",
     "billing-address": "Adreça de facturació",
@@ -333,6 +333,7 @@
     "create-invoice": "Crear factura",
     "create-new-record": "Crear un registre nou",
     "created": "Creat",
+    "created-by": "Creat per",
     "created-default-admin-account": "S'ha creat l'usuari %nick% amb la contrasenya %pass%",
     "creation-date": "Data de creació",
     "credit": "Haver",
@@ -1222,6 +1223,7 @@
     "pvp-unit": "Preu minorista unitari",
     "pvpsindto-line-error": "Error en el valor de pvpsindto de la línia %reference% del document. Valor correcte: %totalWithoutDiscount%",
     "pvptotal-line-error": "Error en el valor 'pvptotal' de la línia %reference% del document. Valor correcte: %total%",
+    "quantities": "Quantitats",
     "quantity": "Quantitat",
     "quantity-abb": "Quant.",
     "quantity-remaining": "Quantitat restant",
@@ -1262,8 +1264,8 @@
     "refund-payment-concept": "Devolució del rebut %document%",
     "refunds": "Devolucions",
     "register": "Registrar",
-    "register-install-ad": "Registra la instalación de FacturaScripts",
-    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
+    "register-install-ad": "Registra la instal·lació de FacturaScripts",
+    "register-install-ad-p": "Si registres la instal·lació de FacturaScripts obtindràs 1 mes de patrocini PRO, que et permet descarregar un dels nostres connectors exclusius. A més, ens ajuda obtenir estadístiques de versions del core i de PHP.",
     "register-installation": "Registrar instal·lació",
     "register-installation-p": "Registri la seva instal·lació per a poder actualitzar plugins de pagament o privats.",
     "register-symbol": "#",
