--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -333,6 +333,7 @@
     "create-invoice": "Rechnung erstellen",
     "create-new-record": "Neuen Datensatz erstellen",
     "created": "erstellt",
+    "created-by": "erstellt von",
     "created-default-admin-account": "Benutzer <b>nick<\/b>mit Passwort <b>pass<\/b> angelegt.",
     "creation-date": "Erstellungsdatum",
     "credit": "Kredit",
@@ -1222,6 +1223,7 @@
     "pvp-unit": "Einzelhandelspreis",
     "pvpsindto-line-error": "Fehler im Wert von pvpsindto der Zeile 0 des Dokuments. Richtiger Wert: 1",
     "pvptotal-line-error": "Fehler im pvptotal Wert der Zeile 0 des Dokuments. Richtiger Wert: 1",
+    "quantities": "Mengen",
     "quantity": "Menge",
     "quantity-abb": "Menge",
     "quantity-remaining": "Verbleibende Menge",
