--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -333,6 +333,7 @@
     "create-invoice": "Create invoice",
     "create-new-record": "Create new record",
     "created": "Created",
+    "created-by": "Created by",
     "created-default-admin-account": "The %nick% user was created with the %pass% password.",
     "creation-date": "Creation date",
     "credit": "Credit",
@@ -1222,6 +1223,7 @@
     "pvp-unit": "Unit retail price",
     "pvpsindto-line-error": "Error in the value of pvpsindto of line %reference% of the document. Correct value: %totalWithoutDiscount%",
     "pvptotal-line-error": "Error in pvptotal value of line %reference% of document. Correct value: %total%",
+    "quantities": "Quantities",
     "quantity": "Quantity",
     "quantity-abb": "Qty",
     "quantity-remaining": "Remaining quantity",
