--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -333,6 +333,7 @@
     "create-invoice": "Faktura sortu",
     "create-new-record": "Erregistro berria sortu",
     "created": "Sortua",
+    "created-by": "Nork sortuta",
     "created-default-admin-account": "%nick% erabiltzailea sortu da %pass% pasahitzarekin",
     "creation-date": "Sortze data",
     "credit": "Hartzekoa",
@@ -1222,6 +1223,7 @@
     "pvp-unit": "Txikizkako prezio unitarioa",
     "pvpsindto-line-error": "Errore bat dago dokumentuaren %reference% lerroko 'pvpsindto' balioan. Balio zuzena: %totalWithoutDiscount%",
     "pvptotal-line-error": "Errore bat dago dokumentuaren %reference% lerroko 'pvptotal' balioan. Balio zuzena: %total%",
+    "quantities": "Kantitateak",
     "quantity": "Kopurua",
     "quantity-abb": "Kant.",
     "quantity-remaining": "Gainerako zenbatekoa",
