--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -333,6 +333,7 @@
     "create-invoice": "Créer une facture",
     "create-new-record": "Créer un nouvel enregistrement",
     "created": "Créé",
+    "created-by": "Créé par",
     "created-default-admin-account": "L'utilisateur %nick% a été créé avec le mot de passe %pass%.",
     "creation-date": "Date de création",
     "credit": "Crédit",
@@ -1222,6 +1223,7 @@
     "pvp-unit": "Prix de vente à l'unité",
     "pvpsindto-line-error": "Erreur dans la valeur de pvpsindto de la ligne %reference% du document. Valeur correcte: %totalWithoutDiscount%",
     "pvptotal-line-error": "Erreur dans la valeur pvptotal de la ligne %reference% du document. Valeur correcte: %total%",
+    "quantities": "Quantités",
     "quantity": "Quantité",
     "quantity-abb": "Qté",
     "quantity-remaining": "Montant restant",
