--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -333,6 +333,7 @@
     "create-invoice": "Crear factura",
     "create-new-record": "Crear novo rexistro",
     "created": "Creado",
+    "created-by": "Creado por",
     "created-default-admin-account": "Creouse o usuario %nick% co contrasinal %pass%",
     "creation-date": "Data de creación",
     "credit": "Haber",
@@ -1222,6 +1223,7 @@
     "pvp-unit": "Prezo minorista unitario",
     "pvpsindto-line-error": "Erro no valor de 'pvpsindto' da liña %reference% do documento. Valor correcto: %totalWithoutDiscount%",
     "pvptotal-line-error": "Erro no valor de 'pvptotal' da liña %reference% do documento. Valor correcto: %total%",
+    "quantities": "Cantidades",
     "quantity": "Cantidade",
     "quantity-abb": "Cant.",
     "quantity-remaining": "Cantidade restante",
