--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -333,6 +333,7 @@
     "create-invoice": "Creare fattura",
     "create-new-record": "Crea un nuovo record",
     "created": "Creato",
+    "created-by": "creato da",
     "created-default-admin-account": "Ha creato utente <b> amministratore <\/ b> con la password <b> amministratore <\/ b>.",
     "creation-date": "Data di creazione",
     "credit": "Credito",
@@ -1222,6 +1223,7 @@
     "pvp-unit": "Prezzo al dettaglio unitario",
     "pvpsindto-line-error": "Errore nel valore di pvpsindto della riga 0 del documento. Valore corretto: 1",
     "pvptotal-line-error": "Errore nel valore pvptotal della riga 0 del documento. Valore corretto: 1",
+    "quantities": "Quantità",
     "quantity": "Quantità",
     "quantity-abb": "abbreviazione di quantità",
     "quantity-remaining": "Quantità rimanente",
