--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -70,7 +70,7 @@
     "agents": "Agentes",
     "alert": "Alerta",
     "alerts": "Alertas",
-    "alfa-code-2": "Código Alfa 2",
+    "alfa-code-2": "Código alfa 2",
     "alfa-code-3": "Código alfa 3",
     "alias": "Alias",
     "alias-general-info": "Permite que você dê um nome ao valor da coluna à sua esquerda",
@@ -333,12 +333,13 @@
     "create-invoice": "Criar fatura",
     "create-new-record": "Criar novo registro",
     "created": "Criado",
+    "created-by": "Criado por",
     "created-default-admin-account": "O utilizador <b> admin <\/b> foi criado com a senha <b> admin <\/b>.",
     "creation-date": "Data de criação",
     "credit": "Crédito",
     "crm": "CRM",
     "cron-job": "Tarefa programada",
-    "cron-timeout": "O cron parou para não exceder o tempo máximo de execução do PHP. Por favor, execute o cron a partir do terminal para evitar esse limite.",
+    "cron-timeout": "O cron parou para não ultrapassar o tempo máximo de execução do PHP. Por favor, execute o cron a partir do terminal para evitar este limite.",
     "crons": "Cronós",
     "currency": "Moeda",
     "currency-position": "Posição do símbolo da moeda",
@@ -379,7 +380,7 @@
     "database-error": "Erro ao conectar à base de dados",
     "database-name-must-be-lowercase": "O nome da base de dados deve estar em minúsculas",
     "date": "Data",
-    "date-in": "Data em",
+    "date-in": "Data de entrada",
     "date-of-suspension": "Data de suspensão",
     "date-of-the-document": "Data do documento",
     "date-out": "Data de saída",
@@ -394,7 +395,7 @@
     "db-name": "Nome do banco de dados",
     "db-password": "Senha do banco de dados",
     "db-port": "Porta do banco de dados",
-    "db-type": "Tipo de servidor SQL",
+    "db-type": "Tipo de banco de dados SQL",
     "db-type-not-recognized": "Tipo de banco de dados não reconhecido. Deve ser MySQL ou PostgreSQL",
     "db-user": "Usuário de banco de dados",
     "debit": "Débito",
@@ -1011,7 +1012,7 @@
     "new-supplier": "Novo Fornecedor",
     "news": "Notícias",
     "next": "Próximo",
-    "nick": "usuario",
+    "nick": "Apelido",
     "no": "Não",
     "no-data": "Sem dados",
     "no-data-received-form": "Nenhum dado recebido do formulário",
@@ -1222,6 +1223,7 @@
     "pvp-unit": "Preço de venda ao consumidor",
     "pvpsindto-line-error": "Erro no valor de 'pvpsindto' da linha %reference% do documento. Valor correto: %totalWithoutDiscount%",
     "pvptotal-line-error": "Erro no valor de 'pvptotal' da linha %reference% do documento. Valor correto: %total%",
+    "quantities": "Quantidades",
     "quantity": "Quantidade",
     "quantity-abb": "Quantidade-abrev",
     "quantity-remaining": "Quantidade restante",
@@ -1263,7 +1265,7 @@
     "refunds": "Reembolsos",
     "register": "Registar",
     "register-install-ad": "Registre a instalação do FacturaScripts",
-    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
+    "register-install-ad-p": "Se você registrar a instalação do FacturaScripts, obterá 1 mês de patrocínio PRO, que permite baixar um dos nossos plugins exclusivos. Além disso, nos ajuda a obter estatísticas das versões do core e do PHP.",
     "register-installation": "Registrar instalação",
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
     "register-symbol": "#",
