--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -228,7 +228,7 @@
     "checked": "Checado",
     "children": "Criança",
     "children-accounts": "Contas Filhas",
-    "choose-currency": "Choose currency",
+    "choose-currency": "Escolha moeda",
     "choose-doc-type": "Escolher tipo de documento",
     "choose-employee": "Escolha empregado",
     "choose-files": "Escolher arquivos",
@@ -262,7 +262,7 @@
     "color-light": "Cor da luz",
     "color-primary": "Color primário",
     "color-secondary": "Cor secundária",
-    "color-success": "Color éxito",
+    "color-success": "Cor de sucesso",
     "color-warning": "Cor da advertência",
     "colors": "Cores",
     "column": "Coluna",
@@ -333,12 +333,13 @@
     "create-invoice": "Criar fatura",
     "create-new-record": "Criar novo registro",
     "created": "Criado",
+    "created-by": "Criado por",
     "created-default-admin-account": "O utilizador <b> admin <\/b> foi criado com a senha <b> admin <\/b>.",
     "creation-date": "Data de criação",
     "credit": "Crédito",
     "crm": "CRM",
     "cron-job": "Tarefa programada",
-    "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
+    "cron-timeout": "O cron parou para não ultrapassar o tempo máximo de execução do PHP. Por favor, execute o cron a partir do terminal para evitar este limite.",
     "crons": "Cronós",
     "currency": "Moeda",
     "currency-position": "Posição do símbolo da moeda",
@@ -816,7 +817,7 @@
     "job-name": "Nome do Trabalho",
     "journal": "Diário",
     "journal-closing": "Fecho de jornal",
-    "journal-opening": "journal-opening",
+    "journal-opening": "Diário de abertura",
     "journals": "Diários",
     "july": "Julho",
     "june": "Junho",
@@ -1080,7 +1081,7 @@
     "orders": "Pedidos",
     "origin": "Origem",
     "origin-warehouse": "Armazém de origem",
-    "original": "original",
+    "original": "Original",
     "original-file": "Arquivo original",
     "other-data": "Outros dados",
     "others-filters": "Outros filtros",
@@ -1193,11 +1194,11 @@
     "print-quantity": "Imprimir quantidade",
     "printed": "Printed",
     "printing-format": "Formato de impressão",
-    "printing-formats": "printing-formats",
+    "printing-formats": "Formatos de impressão",
     "priority": "Prioridade",
     "private": "Privado",
     "private-key": "Chave privada",
-    "process": "Proceso",
+    "process": "Processo",
     "processing": "A processar",
     "product": "produtos",
     "product-not-found": "Produto %ref% não encontrado",
@@ -1222,6 +1223,7 @@
     "pvp-unit": "Preço de venda ao público unitário",
     "pvpsindto-line-error": "Erro no valor de pvpsindto da linha 0 do documento. Valor correto: 1",
     "pvptotal-line-error": "Erro no valor pvptotal da linha 0 do documento. Valor correto: 1",
+    "quantities": "Quantidades",
     "quantity": "Quantidade",
     "quantity-abb": "Quantidade-abrev",
     "quantity-remaining": "Quantidade restante",
@@ -1262,7 +1264,7 @@
     "refund-payment-concept": "Reembolso do documento %document%",
     "refunds": "Reembolsos",
     "register": "Registar",
-    "register-install-ad": "Registrar a instalação do FacturaScripts",
+    "register-install-ad": "Registar a instalação do FacturaScripts",
     "register-install-ad-p": "Se registrar a instalação do FacturaScripts, obterá 1 mês de patrocínio PRO, que lhe permite baixar um dos nossos plugins exclusivos. Além disso, ajuda-nos a obter estatísticas das versões do core e do PHP.",
     "register-installation": "Registrar instalação",
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
@@ -1351,7 +1353,7 @@
     "send-mail-ok": "Email enviado corretamente",
     "send-videos": "Enviar vídeos",
     "sent-a-audio": "Enviou um áudio",
-    "sent-a-document": "Envió un documento",
+    "sent-a-document": "Enviou um documento",
     "sent-a-location": "Enviou uma localização",
     "sent-a-picture": "Enviou uma imagem",
     "sent-a-video": "Enviou um vídeo",
@@ -1518,7 +1520,7 @@
     "third-quarter": "3º trimestre",
     "third-trimester": "Terceiro Trimestre",
     "this-last-fortnight": "Nesta última quinzena",
-    "this-last-month": "O último mês",
+    "this-last-month": "Os últimos 30 dias",
     "this-last-week": "Últimos 7 dias",
     "this-last-year": "Últimos 365 dias",
     "this-month": "Este mês",
@@ -1582,7 +1584,7 @@
     "unlink-file": "Desvincular arquivo",
     "unlink-install-ok": "Instalación borrada del registro correctamente.",
     "unlock-entry": "Desbloquear",
-    "unpaid": "unpaid",
+    "unpaid": "Impago",
     "until-accounting-entry": "Até lançamento contábil",
     "until-date": "Até",
     "until-subaccount": "Até subconta",
@@ -1593,7 +1595,7 @@
     "updated-model": "Atualizado %model% (%key%) %desc%",
     "updater": "Atualizador",
     "updates-available": "Atualizações disponíveis",
-    "updates-available-p": "Há atualizações disponíveis para o FacturaScripts. Por favor, clique no atualizador e faça o download da nova versão. As atualizações corrigem erros e adicionam novas funcionalidades.",
+    "updates-available-p": "Há atualizações disponíveis para o FacturaScripts. Por favor, clique no atualizador e faça o download da nova versão. As atualizações corrigem falhas e adicionam novas funcionalidades.",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
     "uploaded-at": "Carregado em",
