--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -333,6 +333,7 @@
     "create-invoice": "Crear factura",
     "create-new-record": "Crear un nou registre",
     "created": "Creat",
+    "created-by": "Creat per",
     "created-default-admin-account": "S'ha creat l'usuari %nick% amb la contrasenya %pass%",
     "creation-date": "Data de creació",
     "credit": "Crèdit",
@@ -1222,6 +1223,7 @@
     "pvp-unit": "Preu minoriste unitari",
     "pvpsindto-line-error": "Error en el valor de 'pvpsindto' de la línea %reference% del document. El valor correcte és: %totalWithoutDiscount%",
     "pvptotal-line-error": "Error en el valor 'pvptotal' de la línea %reference% de document. El valor correcte és: %total%",
+    "quantities": "Cantidades",
     "quantity": "Cantitat",
     "quantity-abb": "quantity-abb",
     "quantity-remaining": "Quantitat restant",
