--- a/Core/Translation/es_PE.json
+++ b/Core/Translation/es_PE.json
@@ -333,6 +333,7 @@
     "create-invoice": "Crear factura",
     "create-new-record": "Crear nuevo registro",
     "created": "Creado",
+    "created-by": "Creado por",
     "created-default-admin-account": "Se ha creado el usuario %nick% con la contraseña %pass%",
     "creation-date": "Fecha de creación",
     "credit": "abonar",
@@ -1222,6 +1223,7 @@
     "pvp-unit": "Precio minorista unitario",
     "pvpsindto-line-error": "Error en el valor de 'pvpsindto' de la línea %reference% del documento. Valor correcto: %totalWithoutDiscount%",
     "pvptotal-line-error": "Error en el valor de 'pvptotal' de la línea %reference% del documento. Valor correcto: %total%",
+    "quantities": "Cantidades",
     "quantity": "Cantidad",
     "quantity-abb": "Cant.",
     "quantity-remaining": "Cantidad restante",
