--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -18,7 +18,7 @@
     "account-data-missing": "Faltan datos en la cuenta",
     "account-dot-code": "Kropka do autouzpełnienia zer. Przykład: 11.1 = 1100000001",
     "account-length": "Długość subkonta",
-    "account-length-error": "Longitud de subcuenta errónea. La subcuenta %code% debe tener la longitud definida en el ejercicio.",
+    "account-length-error": "Niepoprawna długość subkonta. Subkonto %code% musi mieć długość określoną w ćwiczeniu.",
     "account-missing-in-balance": "La cuenta %codcuenta% tiene saldo %saldo% pero no está incluida en los balances. Considere incluirla si el balance sale descuadrado.",
     "account-parent-error": "Konto nadrzędne jest nieprawidłowe lub nie należy do bieżącego roku",
     "accounting": "Księgowość",
@@ -63,7 +63,7 @@
     "admin": "Administrator",
     "administrator": "Administrator",
     "adult": "Dorosły",
-    "advanced": "Avanzado",
+    "advanced": "Zaawansowane",
     "agent": "Agent",
     "agent-commission-info": "Dotyczy tylko wybranego agenta",
     "agent-dont-have-associated-supplier": "Agent nie ma powiązanego dostawcy",
@@ -94,7 +94,7 @@
     "and": "y",
     "any": "Dowolny",
     "any-group": "Dowolna grupa",
-    "apache-module-not-found": "Módulo de apache no encontrado: %module%",
+    "apache-module-not-found": "Nie znaleziono modułu Apache: %module%",
     "apc-clear": "APC wyczyszczone.",
     "apc-delete-key-item": "Eliminado elemento '%item%' de APC.",
     "apc-get-key-item": "Pobrano element '%item%' z APC.",
@@ -170,7 +170,7 @@
     "browse": "Examinar",
     "business-name": "Nazwa firmy",
     "buy": "Kupować",
-    "cache": "Caché",
+    "cache": "Pamięć podręczna",
     "cache-dir": "Folder pamięci podręcznej '%folderName%'",
     "calculate": "Oblicz",
     "calculated-net-diff": "Znaleziono różnicę podczas obliczania netto. %net% VS %net2%",
@@ -189,7 +189,7 @@
     "cant-change-accounting-entry-exercise": "Nie można zmienić roku obrachunkowego dla wpisu. Utwórz nowy wpis.",
     "cant-change-agent-in-settlement": "Nie można zmienić agenta. Prowizja jest już rozliczona.",
     "cant-connect-database": "Nie można połączyć z bazą danych",
-    "cant-convert-to-innodb": "Imposible convertir la tabla '%tableName%' a InnoDB. Imprescindible para FacturaScripts.",
+    "cant-convert-to-innodb": "Nie można przekonwertować tabeli '%tableName%' na InnoDB. Niezbędne dla FacturaScripts.",
     "cant-create-customer-subaccount": "Imposible crear la subcuenta para el cliente %customerCode%",
     "cant-create-folder": "Nie można utworzyć folderu %folderName%.",
     "cant-create-subaccount-supplier": "Imposible crear la subcuenta para el proveedor %supplierCode%",
@@ -213,7 +213,7 @@
     "carrier": "Przewoźnik",
     "carriers": "Przewoźnicy",
     "cash": "Efectivo",
-    "categories": "Categorias",
+    "categories": "Kategorie",
     "category": "Kategoria",
     "cc": "CC",
     "center": "Centrum",
@@ -259,12 +259,12 @@
     "color-danger": "Kolor niebezpieczeństwa",
     "color-dark": "Kolor ciemny",
     "color-info": "Informacja o kolorze",
-    "color-light": "Color luz",
+    "color-light": "Kolor światła",
     "color-primary": "Kolor podstawowy",
     "color-secondary": "Color secundario",
     "color-success": "Kolor sukcesu",
     "color-warning": "Kolor ostrzeżenia",
-    "colors": "Colores",
+    "colors": "Kolory",
     "column": "Kolumna",
     "columns": "Kolumny",
     "combination-code": "Kod kombinacji",
@@ -308,7 +308,7 @@
     "controller": "Kontroler",
     "controller-error": "Błąd kontrolera",
     "controller-not-found": "Kontroler nie znaleziony",
-    "conversion-rate": "Tasa de conversión a €",
+    "conversion-rate": "Kurs wymiany na €",
     "conversion-rate-not-0": "Stawka konwersji nie może być 0.",
     "convert-into-customer": "Zamień na klienta",
     "convert-into-supplier": "Konwertuj do dostawcy",
@@ -321,7 +321,7 @@
     "correct": "Correcto",
     "cost": "Coste",
     "cost-price": "Cena kosztu",
-    "cost-price-policy": "Política de precio de coste",
+    "cost-price-policy": "Polityka ceny kosztu",
     "counterpart": "Kontrahent",
     "countries": "Kraje",
     "country": "País",
@@ -333,6 +333,7 @@
     "create-invoice": "Utwórz fakturę",
     "create-new-record": "Utwórz nowy wpis",
     "created": "Creado",
+    "created-by": "Utworzone przez",
     "created-default-admin-account": "Se ha creado el usuario %nick% con la contraseña %pass%",
     "creation-date": "Data utworzenia",
     "credit": "Haber",
@@ -347,7 +348,7 @@
     "customer": "Klient",
     "customer-account-not-found": "Nie znaleziono subkonta klienta",
     "customer-banking-accounts": "Cuentas bancarias",
-    "customer-code": "Cód. Cliente",
+    "customer-code": "Kod klienta",
     "customer-commission-info": "Będzie mieć zastosowanie tylko wtedy, gdy sprzedaż dotyczy wybranego klienta.",
     "customer-delivery-note": "Dowód dostawy",
     "customer-delivery-notes": "Notatki dostawy klienta",
@@ -410,7 +411,7 @@
     "default-to-company-email": "Domyślnie na e-mail firmy",
     "default-to-user-email": "Domyślnie na email użytkownika",
     "default-warehouse": "Domyślny magazyn",
-    "delete": "Eliminar",
+    "delete": "Usuń",
     "delete-all": "Usuń wszystko",
     "delete-closing": "Eliminar asientos de cierre",
     "delete-data": "Usuń dane",
@@ -468,7 +469,7 @@
     "do-nothing": "Nie rób nic",
     "doc-type": "Typ dokumentu",
     "document": "Documento",
-    "document-configuration": "Configuración de documentos",
+    "document-configuration": "Konfiguracja dokumentów",
     "document-report": "Informe de documentos",
     "document-sequence": "Sekwencja dokumentu",
     "document-sequences": "Sekwencje dokumentów",
@@ -483,13 +484,13 @@
     "domiciled": "Zamieszkały",
     "done": "Zrealizowane",
     "done-date": "Data zakończenia",
-    "dont-sell-above-pvp": "No vender por encima de PVP",
+    "dont-sell-above-pvp": "Nie sprzedawaj powyżej PVP",
     "dont-sell-below-cost": "No vender por debajo de coste",
     "download": "Pobierz",
     "download-completed": "Pobieranie zakończone",
     "download-error": "Błąd podczas pobierania. Kod %status% - %error%",
     "download-xml": "Descargar XML",
-    "downloads": "Descargas",
+    "downloads": "Pobrania",
     "drag": "Arrastrar",
     "dto": "Dto.",
     "dto-2": "Dto. 2",
@@ -512,7 +513,7 @@
     "email-sent": "Email wysłany",
     "email-sent-to": "Email wysłany do %email%",
     "email-signature": "Podpis e-mail",
-    "email-to": "Email para",
+    "email-to": "E-mail do",
     "emails": "Emaile",
     "emails-sent": "Wysłane e-maile",
     "employee": "Pracownik",
@@ -589,7 +590,7 @@
     "expense-subaccount": "Subcuenta para gastos bancarios",
     "expenses": "Wydatki",
     "expiration": "Wygaszenie",
-    "expiration-type": "Tipo de vencimiento",
+    "expiration-type": "Typ wygaśnięcia",
     "expired": "Wygasły",
     "expired-receipt": "Wygasły paragon",
     "export": "Eksportować",
@@ -627,7 +628,7 @@
     "finished-cron": "Zakończono wykonywanie crona. Zużyty czas: %timeNeeded% sekund, Pamięć: %memoryUsed%",
     "first-quarter": "1. kwartał",
     "first-steps": "Pierwsze kroki",
-    "first-trimester": "Primer trimestre",
+    "first-trimester": "Pierwszy trymestr",
     "fiscal-data": "Dane fiskalne",
     "fiscal-exercise": "Ejercicio fiscal",
     "fiscal-id": "Id. Fiskalny",
@@ -652,7 +653,7 @@
     "fourth-quarter": "4. kwartał",
     "fourth-trimester": "Cuarto trimestre",
     "free": "Gratis",
-    "friday": "Viernes",
+    "friday": "Piątek",
     "from": "Od",
     "from-accounting-entry": "Od pozycji",
     "from-date": "Od",
@@ -676,7 +677,7 @@
     "generated-accounts": "%quantity% wygenerowanych kont księgowych.",
     "generated-agents": "Wygenerowano %quantity% agentów.",
     "generated-at": "Generado el %when%",
-    "generated-contacts": "%quantity% contactos generados.",
+    "generated-contacts": "Wygenerowano %quantity% kontaktów.",
     "generated-customer-delivery-notes": "Wygenerowano %quantity% faktur sprzedaży.",
     "generated-customer-estimations": "Wygenerowano %quantity% oszacowań klientów.",
     "generated-customer-groups": "Wygenerowano %quantity% grup klientów.",
@@ -708,7 +709,7 @@
     "group-by-year-unixtime": "Grupuj według roku (unix time)",
     "group-more-docs-p": "Jeśli chcesz, możesz grupować razem z innymi dokumentami tego klienta\/dostawcy",
     "group-name": "Nombre del Grupo",
-    "group-or-split": "Agrupar o partir",
+    "group-or-split": "Grupować lub dzielić",
     "group-or-split-p": "Ten kreator pozwala generować nowy dokument na podstawie linii innych dokumentów. Wybierz ilości, które chcesz użyć, datę nowego dokumentu i naciśnij przycisk generuj.",
     "grouping-type": "Grupowanie",
     "groups": "Grupy",
@@ -719,7 +720,7 @@
     "heading-account-group-id": "ID grupy kont",
     "heading-account-id-root": "ID rodzica",
     "health": "Salud",
-    "height": "Alto",
+    "height": "Wysokość",
     "hello": "Cześć",
     "help": "Pomoc",
     "help-button-p": "Konsultuj pomoc na każdym ekranie",
@@ -808,7 +809,7 @@
     "iso": "ISO",
     "issued": "Wydano",
     "item-limit": "Elementy na stronę",
-    "items-added-correctly": "%num% elementos añadidos correctamente",
+    "items-added-correctly": "%num% elementów dodanych poprawnie",
     "items-removed-correctly": "%num% elementy usunięte poprawnie",
     "ivarep-subaccount-not-found": "Podkonto odwrotne VAT nie znalezione",
     "ivasop-account-not-found": "Nie znaleziono podkonta IVA",
@@ -838,7 +839,7 @@
     "languages-es_ES": "Hiszpański (Hiszpania)",
     "languages-es_GT": "Español (Gwatemala)",
     "languages-es_MX": "Español (México)",
-    "languages-es_PA": "Español (Panamá)",
+    "languages-es_PA": "Hiszpański (Panama)",
     "languages-es_PE": "Hiszpański (Peru)",
     "languages-es_UY": "Hiszpański (Urugwaj)",
     "languages-eu_ES": "Euskera",
@@ -878,7 +879,7 @@
     "liabilities": "Zobowiązania",
     "library": "Biblioteka",
     "license": "Licencja",
-    "like-than": "Igual que",
+    "like-than": "Tak jak",
     "line": "Línea",
     "lines": "Linie",
     "linux": "Linux",
@@ -886,7 +887,7 @@
     "load-def-acc-plan": "Wczytaj domyślny plan rachunkowości",
     "loading-controller": "Ładowanie kontrolera: '%controllerName%'",
     "location": "Lokalizacja",
-    "lock-accounting": "Bloquear contabilidad",
+    "lock-accounting": "Zablokować księgowość",
     "lock-entry": "Zablokuj wpis",
     "lock-invoice": "Oznacz jako wystawioną",
     "lock-unlock": "(Des)Bloquear",
@@ -910,7 +911,7 @@
     "longitude": "Długość",
     "longitude-abb": "Long",
     "look-for-gaps": "Szukaj luk",
-    "lot": "Lote",
+    "lot": "Lodź",
     "low-security": "Niski poziom bezpieczeństwa",
     "machine": "Maszyna",
     "machines": "Maszyny",
@@ -1068,7 +1069,7 @@
     "opened": "Abierto",
     "opening-acounting-completed": "Prawidłowe otwarcie ćwiczenia",
     "opening-operation": "Otwarcie",
-    "operation": "Operación",
+    "operation": "Operacja",
     "operator": "Operator",
     "option": "Opcja",
     "optional": "opcjonalny",
@@ -1112,8 +1113,8 @@
     "pattern-without-year": "Wybrany wzór nie zawiera roku ani daty, co może prowadzić do generowania zduplikowanych kodów w każdym roku",
     "pay": "Pagar",
     "pay-with-card": "Zapłać kartą",
-    "payment": "Pago",
-    "payment-date": "Fecha de pago",
+    "payment": "Płatność",
+    "payment-date": "Data płatności",
     "payment-days": "Dni płatności",
     "payment-method": "Metoda płatności",
     "payment-methods": "Formy płatności",
@@ -1154,7 +1155,7 @@
     "plugin-installed": "Plugin '%pluginName%' zainstalowany",
     "plugin-need-update": "Wtyczka %plugin% będzie wymagać aktualizacji, aby działała z nową wersją FacturaScripts.",
     "plugin-need-update-but": "Wtyczka %plugin% nie ma jeszcze kompatybilnej aktualizacji.",
-    "plugin-needed": "Se requiere el plugin %pluginName%.",
+    "plugin-needed": "Wymagany jest wtyczka %pluginName%.",
     "plugin-needs-fs-version": "El plugin %pluginName% necesita FacturaScripts %minVersion% pero tiene instalado FacturaScripts %version%",
     "plugin-not-compatible": "Wtyczka %pluginName% nie jest zgodna z FacturaScripts %version%",
     "plugin-order": "Zamówienie: %num%",
@@ -1162,7 +1163,7 @@
     "plugin-removal-disabled": "La eliminación de plugins está desactivada en este servidor",
     "plugin-unsupported-version": "Wtyczka %pluginName% jest przeznaczona dla FacturaScripts 2017 lub wcześniejszych wersji, ale używasz FacturaScripts %version%",
     "plugin-update": "Aktualizacja wtyczki %pluginName% do wersji %version%",
-    "plugins": "Plugins",
+    "plugins": "Wtyczki",
     "plugins-p": "Wtyczki umożliwiają dodawanie nowych funkcji. Aktywuj te, które potrzebujesz teraz, lub zrób to, gdy chcesz z menu administratora.",
     "points": "Punkty",
     "points-of-interest": "Punkty zainteresowania",
@@ -1173,7 +1174,7 @@
     "postgresql": "PostgreSQL",
     "precio": "Cena",
     "predefined-concepts": "Predefiniowane pojęcia",
-    "preferences": "Preferencias",
+    "preferences": "Preferencje",
     "preview": "Podgląd",
     "previous": "Poprzedni",
     "previous-balance": "Poprzedni bilans",
@@ -1212,7 +1213,7 @@
     "province": "Provincia",
     "provinces": "Prowincje",
     "public": "Publiczne",
-    "public-key": "Clave pública",
+    "public-key": "Klucz publiczny",
     "purchase-rate": "Wskaźnik zakupów",
     "purchased-quantity": "Ilość kupiona",
     "purchases": "Zakupy",
@@ -1222,6 +1223,7 @@
     "pvp-unit": "Jednostkowa cena detaliczna",
     "pvpsindto-line-error": "Error en el valor de 'pvpsindto' de la línea %reference% del documento. Valor correcto: %totalWithoutDiscount%",
     "pvptotal-line-error": "Błąd w wartości 'pvptotal' linii %reference% dokumentu. Prawidłowa wartość: %total%",
+    "quantities": "Ilości",
     "quantity": "Ilość",
     "quantity-abb": "Ilość",
     "quantity-remaining": "Cantidad restante",
@@ -1265,7 +1267,7 @@
     "register-install-ad": "Zarejestruj instalację FacturaScripts",
     "register-install-ad-p": "Jeśli zarejestrujesz instalację FacturaScripts, otrzymasz 1 miesiąc sponsoringu PRO, który pozwala na pobranie jednej z naszych ekskluzywnych wtyczek. Pomaga nam także uzyskać statystyki dotyczące wersji rdzenia i PHP.",
     "register-installation": "Zarejestruj instalację",
-    "register-installation-p": "Registre su instalación para poder actualizar plugins de pago o privados.",
+    "register-installation-p": "Zarejestruj swoją instalację, aby móc aktualizować płatne lub prywatne wtyczki.",
     "register-symbol": "#",
     "registered-installation": "Instalación registrada #%number%",
     "registered-installation-p": "Ta instalacja została już zarejestrowana. Jeśli masz płatne wtyczki, naciśnij przycisk zarządzania, aby je powiązać i móc zaktualizować.",
@@ -1273,7 +1275,7 @@
     "reject": "Odrzuć",
     "rejected": "Odrzucono",
     "related": "Powiązane",
-    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
+    "related-subaccount-bank-charges": "Podkonto związane z kosztami bankowymi (prowizje itp.)",
     "related-subaccount-purchases-sales": "Powiązana subkonta do zakupów i sprzedaży",
     "reloading": "Ładowanie...",
     "remove-filter": "Usuń filtr",
@@ -1318,7 +1320,7 @@
     "running-plugin-cron": "Uruchamianie cron wtyczki %pluginName%",
     "sales": "Ventas",
     "sales-invoice": "Faktura sprzedaży",
-    "sales-rate": "Tasa de ventas",
+    "sales-rate": "Wskaźnik sprzedaży",
     "sales-subaccount-not-found": "Nie znaleziono podkonta sprzedaży",
     "same-group": "Ta sama grupa",
     "saturday": "Sobota",
@@ -1384,7 +1386,7 @@
     "show-crm-warnings": "Pokaż ostrzeżenia CRM",
     "show-expired-receipts": "Pokaż przeterminowane pokwitowania",
     "show-month-stats": "Pokaż statystyki miesięczne",
-    "show-pending-remittances": "Mostrar remesas pendientes",
+    "show-pending-remittances": "Pokaż oczekujące remisy",
     "show-price": "Pokaż cenę w druku",
     "show-quantity": "Pokaż ilość w druku",
     "show-section-new": "Pokaż sekcję tworzenia",
@@ -1415,7 +1417,7 @@
     "spreadsheet-xls": "Plik Excel",
     "standard": "Estándar",
     "start": "Początek",
-    "start-date": "Fecha de inicio",
+    "start-date": "Data rozpoczęcia",
     "start-hour": "Godzina rozpoczęcia",
     "start-time": "Czas rozpoczęcia",
     "starting-cron": "Uruchamianie crona FacturaScripts...",
@@ -1436,7 +1438,7 @@
     "structured-data-csv": "Plik CSV",
     "sub-account": "Subcuenta",
     "sub-type": "Podtyp",
-    "subaccount": "Subcuenta",
+    "subaccount": "Podkonto",
     "subaccount-bad-codcuenta": "Subkonto %codsubcuenta% ma przypisaną niepoprawną konto.",
     "subaccount-belongs-other-year": "Konto podrzędne %subAccountCode% należy do innego roku.",
     "subaccount-irpf": "Konto dla potrąceń",
@@ -1462,9 +1464,9 @@
     "supplied-subaccount-not-found": "Podrachunek zaopatrzony nie znaleziony",
     "supplier": "Dostawca",
     "supplier-account-not-found": "Nie znaleziono subkonta dostawcy",
-    "supplier-code": "Cód. Proveedor",
+    "supplier-code": "Kod dostawcy",
     "supplier-delivery-note": "Wysłano dostawę od dostawcy",
-    "supplier-delivery-notes": "Albaranes de proveedores",
+    "supplier-delivery-notes": "Dokumenty dostawy od dostawców",
     "supplier-estimation": "Szacowanie dostawcy",
     "supplier-estimations": "Kosztorysy dostawców",
     "supplier-have-no-iban": "Dostawca %%supplier nie posiada IBAN (numer konta bankowego)",
@@ -1537,7 +1539,7 @@
     "to-refund": "Do zwrotu",
     "to-report": "Zgłosić",
     "today": "Dzisiaj",
-    "total": "Total",
+    "total": "Razem",
     "total-amount": "Suma total",
     "total-cost": "Całkowity koszt",
     "total-purchases": "Całkowite zakupy",
@@ -1545,7 +1547,7 @@
     "total-value-error": "Wartość całkowita %docType% %docCode% jest nieprawidłowa (%docTotal%). Właściwa wartość: %calcTotal%",
     "total-with-taxes": "Całkowity + podatki",
     "totalirpf-value-error": "Nieprawidłowa łączna wartość IRPF %docType% %docCode% (%docTotalIRPF%). Poprawna wartość to: %calcTotalIRPF%",
-    "totaliva-value-error": "Valor total iva de %docType% %docCode%incorrecto (%docTotalTax%). Valor correcto:  %calcTotalTax%",
+    "totaliva-value-error": "Całkowita wartość VAT %docType% %docCode% niepoprawna (%docTotalTax%). Właściwa wartość: %calcTotalTax%",
     "totallinea-value-error": "Błąd wartości totallinea w linii VAT podatku %taxCode% w fakturze. Prawidłowa wartość: %totalLine%",
     "totals": "Całkowite",
     "town": "Miejscowość",
@@ -1561,10 +1563,10 @@
     "type": "Typ",
     "type-alert": "Typ alarmu",
     "type-critical": "Typ krytyczny",
-    "type-debug": "Tipo depurar",
+    "type-debug": "Typ debugowania",
     "type-emergency": "Typ awaryjny",
     "type-error": "Typ błędu",
-    "type-info": "Tipo info",
+    "type-info": "Typ informacji",
     "type-notice": "Typ powiadomienia",
     "type-success": "Typ poprawny",
     "type-warning": "Tipo advertencia",
@@ -1678,7 +1680,7 @@
     "you-sent-a-location": "Enviaste una ubicación",
     "you-sent-a-picture": "Enviaste una imagen",
     "you-sent-a-video": "Enviaste un video",
-    "you-should-change-passwd": "Debería cambiar su contraseña",
+    "you-should-change-passwd": "Powinieneś zmienić swoje hasło",
     "your": "Twój",
     "zip-code": "Kod pocztowy",
     "zip-codes": "Kody pocztowe",
