- Añadido el widget seconds, para representar duraciones o retrasos medidas en segundos. - Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1265,7 +1265,7 @@
     "refunds": "Rimborsi",
     "register": "registrare",
     "register-install-ad": "Registra l'installazione di FacturaScripts",
-    "register-install-ad-p": "Se registri l'installazione di FacturaScripts otterrai 1 mese di sponsorizzazione PRO, che ti consente di scaricare uno dei nostri plugin esclusivi. Inoltre ci aiuta a ottenere statistiche sulle versioni del core e di PHP.",
+    "register-install-ad-p": "Registrando l'installazione di FacturaScripts ottieni 1 mese di sponsorizzazione PRO, che ti consente di scaricare uno dei nostri plugin esclusivi. Inoltre, ci aiuta a ottenere statistiche sulle versioni del core e di PHP.",
     "register-installation": "Registra installazione",
     "register-installation-p": "Registra la tua installazione per poter aggiornare i plugin di pagamento o privati.",
     "register-symbol": "#",
