--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1656,7 +1656,7 @@
     "without-domicile": "Sem domicílio",
     "without-groups": "Sem grupo",
     "without-regularization": "Sem regularização",
-    "without-tax": "Sem impostos",
+    "without-tax": "Sem IVA",
     "without-taxation": "Sem tributação",
     "wizard": "Assistente",
     "wizard-p": "Preencha este formulário sobre o seu negócio para concluir a configuração.",
