--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -401,7 +401,7 @@
     "debit": "Débito",
     "debug-mode": "Modo de depuração",
     "december": "Dezembro",
-    "decimal-separator": "Decimal",
+    "decimal-separator": "Separador de decimais",
     "decimals": "Decimais",
     "default": "Padrão",
     "default-customer": "Cliente Padrão",
@@ -632,7 +632,7 @@
     "fiscal-data": "Dados fiscais",
     "fiscal-exercise": "Exercício fiscal",
     "fiscal-id": "Id.",
-    "fiscal-number": "fiscal-number",
+    "fiscal-number": "Núm. fiscal",
     "fixed-value": "Valor fixo",
     "flag": "Bandeira",
     "folder-not-writable": "Você não pode escrever na pasta FacturaScripts.",
@@ -753,7 +753,7 @@
     "import-accounting-plan-p": "Deixe este campo em branco para usar o plano contabilístico padrão. Ou selecione um arquivo com seu plano contábil personalizado.",
     "import-file": "Arquivo de importação",
     "in-progress": "Em andamento",
-    "in-stock": "in-stock",
+    "in-stock": "Em stock",
     "inactive": "Inativo",
     "income-and-expenses": "Receitas e Despesas",
     "incompatible-document": "Documento incompatível: %code%. Para agrupar documentos, eles devem ter o mesmo cliente ou fornecedor, série, armazém, moeda e descontos globais.",
@@ -779,7 +779,7 @@
     "invalid-date-there-are-invoices-after": "Data inválida: %date%. A fatura %other% é posterior e mesmo assim tem data anterior: %other-date%. Toda fatura deve ter data anterior ou igual à seguinte.",
     "invalid-date-there-are-invoices-before": "Data inválida: %date%. A fatura %other% é anterior a esta e no entanto tem data posterior: %other-date%. Toda a fatura deve ter uma data anterior ou igual à seguinte.",
     "invalid-iban": "i",
-    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
+    "invalid-iso-code": "Código ISO '%iso-code%' não válido",
     "invalid-number": "Número não válido: %number%",
     "invalid-request": "Pedido não válido",
     "invalid-user-can-permission": "Permissão inválida: %permission%. As permissões disponíveis são access, delete, export, import, update e only-owner-data.",
@@ -1123,7 +1123,7 @@
     "pct-irpf": "% IRS",
     "pct-surcharge": "% Acréscimo",
     "pct-tax": "% impostos",
-    "pct-vat": "VAT rate",
+    "pct-vat": "Taxa de IVA",
     "pending": "Pendente",
     "pending-invoices-button": "Faturas Pendentes:",
     "pending-orders-button": "Ordens Ptes:",
@@ -1615,7 +1615,7 @@
     "value": "Valor",
     "value-x": "Valor X",
     "value-y": "Valor Y",
-    "values": "values",
+    "values": "Valores",
     "variables": "Variáveis",
     "variant": "Variante",
     "variants": "Variantes",
@@ -1681,7 +1681,7 @@
     "you-sent-a-picture": "Você enviou uma imagem",
     "you-sent-a-video": "Enviou um vídeo",
     "you-should-change-passwd": "deveria-mudar-senha",
-    "your": "your",
+    "your": "Seu",
     "zip-code": "Código postal",
     "zip-codes": "Códigos postais",
     "zip-error-wrong-structure": "A estrutura do zip está incorreta. Deve conter a pasta do plugin e apenas um plugin."
